<resources>
    <string name="app_name">Three in a Row</string>
    <string name="main_header">Welcome</string>
    <string name="main_explain">Fill out the game board with 2 colours.</string>

    <string name="main_rule">To win a game, the board must be full without having three in a row of any of your two colours (horizontally or vertically).</string>

    <string name="main_play_now">Click \"Start New Game\" in the menu in top right corner to play.</string>

    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_game">Start New Game</string>
    <string name="action_help">Help</string>
    <string name="action_win_lose">Win - Lose record</string>
    <string name="btn_text_start_new_game_home_screen">Start Game</string>

    <string name="title_activity_play">Play Game</string>
    <string name="info_label">Choose a field on the grid</string>
    <string name="losing_msg">Sorry, you lost!</string>
    <string name="btn_text_start_new_game_play_screen">Start new Game</string>

    <string name="winning_msg">You won!</string>
    <string name="game_difficulty">Difficulty: easy</string>
    <string name="game_timer">Time: 3.00</string>

    <string name="title_activity_help">Help</string>
    <string name="help_explain">The aim of the game is to fill out the game board with 2 different colors. The colours will alternate and you have to choose a free (grey) spot on the board.</string>
    <string name="help_rule">To win a game, the board must be full and you cannot have three in a row of any of your two colors (diagonally is accepted).</string>
    <string name="help_play_now">Start a new game by clicking \"Start New Game\" in the menu in top right corner or just press the \"Start New Game\" button below the board.</string>
    <string name="help_navigation_explain">You can navigate by using the menu in top right corner</string>
    <string name="help_settings_explain">You can change the colours, difficulty, and grid size in \"Settings\"</string>
    <string name="help_statistic_explain">You can see your game statistics in \"Win - Lose record\"</string>

    <string name="title_activity_win_lose">Win - Lose record</string>
    <string name="win_lose_body">Win - Lose screen under construction</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings_body">Settings is still under construction</string>
    <string name="settings_difficulty">Difficulty</string>
    <string name="settings_grid_size">Grid size</string>
    <string name="settings_color1">Color 1</string>
    <string name="settings_color2">Color 2</string>
    <string name="settings_colors">Choose two colors</string>

    <string name="settings_btn">Save settings</string>

    <!--<integer-array name="colour_images">-->
        <!--<item>@drawable/red</item>-->
        <!--<item>@drawable/white</item>-->
        <!--<item>@drawable/blue</item>-->
    <!--</integer-array>-->

    <string-array name="theme">
        <item>Blue</item>
        <item>Silver</item>
        <item>Gold</item>
    </string-array>

    <string-array name="difficulty">
        <item>Easy</item>
        <item>Average</item>
        <item>Hard</item>
    </string-array>

    <string-array name="grid_size">
        <item>4 x 4</item>
        <item>5 x 5</item>
        <item>6 x 6</item>
    </string-array>

    <!--<string-array name="colour_1_arr">-->
        <!--<item>Please choose</item>-->
        <!--<item>Red</item>-->
        <!--<item>White</item>-->
        <!--<item>Blue</item>-->
    <!--</string-array>-->

    <!--<string-array name="colour_2_arr">-->
        <!--<item>Please choose</item>-->
        <!--<item>Red</item>-->
        <!--<item>Red</item>-->
        <!--<item>White</item>-->
        <!--<item>Blue</item>-->
    <!--</string-array>-->

</resources>
