<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/new_game"
        android:orderInCategory="10"
        android:title="@string/action_new_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/best_times"
        android:orderInCategory="20"
        android:title="@string/action_best_times"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>