<?xml version="1.0" encoding="utf-8"?>
<!--
Student name:    Kirstine B. Nielsen
Student id:      100527988
Date:            13/10/2016
Project:         Three in a row
Version:         1.0 - Prototype
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.edu.holmesglen.kirstine_n.threeinarow.HelpActivity"
    tools:showIn="@layout/activity_help"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_explain"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_rule"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_play_now"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_navigation_explain"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_statistic_explain"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_settings_explain"
        android:paddingBottom="20dp"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

</LinearLayout>
