<!--
Student name:    Kirstine B. Nielsen
Student id:      100527988
Date:            13/10/2016
Project:         Three in a row
Version:         1.3
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="au.edu.holmesglen.kirstine_n.threeinarow.MainActivity">

    <item
        android:id="@+id/new_game"
        android:orderInCategory="1"
        android:title="@string/action_new_game"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:orderInCategory="25"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/best_times"
        android:orderInCategory="20"
        android:title="@string/action_best_times"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
